Update project section with new titles and GitHub links; enhance styling for project info

--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
     </section>
 
     <section id="projects">
-      <h2>Front-End Projects</h2>
+      <h2>Front-End Design Templates</h2>
       <div class="projects-grid">
+        <div class="project-card">
+          <a href="https://minha12.github.io/personal-portfolio/" target="_blank">
+            <img 
+              src="./assets/personal-portfolio.png" 
+              alt="Personal Portfolio" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Personal Portfolio</h3>
+            <a href="https://github.com/minha12/personal-portfolio" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
         <div class="project-card">
           <a href="https://minha12.github.io/survey-form/" target="_blank">
             <img 
@@ -38,8 +53,13 @@
               alt="Survey Form" 
               class="project-thumbnail"
             >
-            <h3 class="project-title">Survey Form</h3>
           </a>
+          <div class="project-info">
+            <h3 class="project-title">Survey Form</h3>
+            <a href="https://github.com/minha12/survey-form" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
         <div class="project-card">
           <a href="https://minha12.github.io/tribute-page/" target="_blank">
@@ -48,8 +68,13 @@
               alt="Tribute Page" 
               class="project-thumbnail"
             >
-            <h3 class="project-title">Tribute Page</h3>
           </a>
+          <div class="project-info">
+            <h3 class="project-title">Tribute Page</h3>
+            <a href="https://github.com/minha12/tribute-page" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
         <div class="project-card">
           <a href="https://minha12.github.io/tech-doc-page/" target="_blank">
@@ -58,8 +83,13 @@
               alt="Technical Documentation" 
               class="project-thumbnail"
             >
-            <h3 class="project-title">Technical Documentation</h3>
           </a>
+          <div class="project-info">
+            <h3 class="project-title">Technical Documentation</h3>
+            <a href="https://github.com/minha12/tech-doc-page" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
         <div class="project-card">
           <a href="https://minha12.github.io/product-landing-page" target="_blank">
@@ -68,8 +98,13 @@
               alt="Product Landing Page" 
               class="project-thumbnail"
             >
-            <h3 class="project-title">Product Landing Page</h3>
           </a>
+          <div class="project-info">
+            <h3 class="project-title">Product Landing Page</h3>
+            <a href="https://github.com/minha12/product-landing-page" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
       </div>
     </section>  
