--- a/index.html
+++ b/index.html
@@ -29,6 +29,40 @@
     </section>
 
     <section id="projects">
+      <h2>Front-End Apps</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <a href="https://minha12.github.io/markdown-previewer/" target="_blank">
+            <img 
+              src="./assets/markdown-previewer.png" 
+              alt="Markdown Previewer" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Markdown Previewer</h3>
+            <a href="https://github.com/minha12/markdown-previewer" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <a href="https://minha12.github.io/random-quote-machine/" target="_blank">
+            <img 
+              src="./assets/random-quote-machine.png" 
+              alt="Random Quote Machine" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Random Quote Machine</h3>
+            <a href="https://github.com/minha12/random-quote-machine" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
       <h2>Front-End Design Templates</h2>
       <div class="projects-grid">
         <div class="project-card">
