Add Drum Machine project card with links and thumbnail

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
           </div>
         </div>
         <div class="project-card">
+          <a href="https://minha12.github.io/drum-machine/" target="_blank">
+            <img 
+              src="./assets/drum-machine.png" 
+              alt="Drum Machine" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Drum Machine</h3>
+            <a href="https://github.com/minha12/drum-machine" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
           <a href="https://minha12.github.io/markdown-previewer/" target="_blank">
             <img 
               src="./assets/markdown-previewer.png" 
