Add Pomodoro Clock project card with links and thumbnail

--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
       <h2>Front-End Apps</h2>
       <div class="projects-grid">
         <div class="project-card">
+          <a href="https://minha12.github.io/pomodoro-clock/" target="_blank">
+            <img 
+              src="./assets/pomodoro-clock.png" 
+              alt="Pomodoro Clock" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Pomodoro Clock</h3>
+            <a href="https://github.com/minha12/pomodoro-clock" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
           <a href="https://minha12.github.io/react-calculator/" target="_blank">
             <img 
               src="./assets/react-calculator.png" 
