Add D3 data visualization project cards with links and thumbnails

--- a/index.html
+++ b/index.html
@@ -108,6 +108,88 @@
         </div>
       </div>
 
+      <h2>Data Visualization</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <a href="https://minha12.github.io/bar-graph/" target="_blank">
+            <img 
+              src="./assets/bar-graph.png" 
+              alt="D3 Bar Graph" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">D3 Bar Graph</h3>
+            <a href="https://github.com/minha12/bar-graph" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <a href="https://minha12.github.io/scatterplot-graph/" target="_blank">
+            <img 
+              src="./assets/scatterplot-graph.png" 
+              alt="D3 Scatterplot Graph" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">D3 Scatterplot Graph</h3>
+            <a href="https://github.com/minha12/scatterplot-graph" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://minha12.github.io/heat-map/" target="_blank">
+            <img 
+              src="./assets/heat-map.png" 
+              alt="D3 Heat Map" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">D3 Heat Map</h3>
+            <a href="https://github.com/minha12/heat-map" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://minha12.github.io/choropleth-map/" target="_blank">
+            <img 
+              src="./assets/choropleth-map.png" 
+              alt="D3 Choropleth Map" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">D3 Choropleth Map</h3>
+            <a href="https://github.com/minha12/choropleth-map" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://minha12.github.io/tree-map/" target="_blank">
+            <img 
+              src="./assets/tree-map.png" 
+              alt="D3 Tree Map" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">D3 Tree Map</h3>
+            <a href="https://github.com/minha12/tree-map" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
       <h2>Front-End Design Templates</h2>
       <div class="projects-grid">
         <div class="project-card">
