--- a/index.html
+++ b/index.html
@@ -108,6 +108,89 @@
         </div>
       </div>
 
+      <h2>Back-End Services</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <a href="https://timestamp-service-uwh9.onrender.com" target="_blank">
+            <img 
+              src="./assets/timestamp-service.png" 
+              alt="Timestamp Microservice" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Timestamp Microservice</h3>
+            <a href="https://github.com/minha12/timestamp-service" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://exercise-tracker-9ucf.onrender.com" target="_blank">
+            <img 
+              src="./assets/exercise-tracker.png" 
+              alt="Exercise Tracker" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Exercise Tracker</h3>
+            <a href="https://github.com/minha12/exercise-tracker" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://header-parser-dapl.onrender.com" target="_blank">
+            <img 
+              src="./assets/header-parser.png" 
+              alt="Header Parser" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Header Parser</h3>
+            <a href="https://github.com/minha12/header-parser" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://url-shortener-4hvu.onrender.com" target="_blank">
+            <img 
+              src="./assets/url-shortener.png" 
+              alt="URL Shortener" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">URL Shortener</h3>
+            <a href="https://github.com/minha12/url-shortener" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://file-metadata-t1xm.onrender.com" target="_blank">
+            <img 
+              src="./assets/file-metadata.png" 
+              alt="File Metadata Service" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">File Metadata Service</h3>
+            <a href="https://github.com/minha12/file-metadata" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
       <h2>Data Visualization</h2>
       <div class="projects-grid">
         <div class="project-card">
