--- a/index.html
+++ b/index.html
@@ -273,6 +273,25 @@
         </div>
       </div>
 
+      <h2>Full-Stack Apps</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <a href="https://metric-converter-88bu.onrender.com/" target="_blank">
+            <img 
+              src="./assets/metric-converter.png" 
+              alt="Metric Converter" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Metric Converter</h3>
+            <a href="https://github.com/minha12/metric-converter" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
       <h2>Front-End Design Templates</h2>
       <div class="projects-grid">
         <div class="project-card">
