Add new project cards for Personal Library, Anonymous Chat, Issue Tracker, and Stock Price Checker to index.html

--- a/index.html
+++ b/index.html
@@ -290,6 +290,70 @@
             </a>
           </div>
         </div>
+
+        <div class="project-card">
+          <a href="https://personal-library-j95u.onrender.com" target="_blank">
+            <img 
+              src="./assets/personal-library.png" 
+              alt="Personal Library" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Personal Library</h3>
+            <a href="https://github.com/minha12/personal-library" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://anonymous-chat-k9n6.onrender.com/" target="_blank">
+            <img 
+              src="./assets/anonymous-chat.png" 
+              alt="Anonymous Chat" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Anonymous Chat</h3>
+            <a href="https://github.com/minha12/anonymous-chat" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://issue-tracker-dnyt.onrender.com" target="_blank">
+            <img 
+              src="./assets/issue-tracker.png" 
+              alt="Issue Tracker" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Issue Tracker</h3>
+            <a href="https://github.com/minha12/issue-tracker" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="https://stock-checker-xnlx.onrender.com" target="_blank">
+            <img 
+              src="./assets/stock-checker.png" 
+              alt="Stock Price Checker" 
+              class="project-thumbnail"
+            >
+          </a>
+          <div class="project-info">
+            <h3 class="project-title">Stock Price Checker</h3>
+            <a href="https://github.com/minha12/stock-checker" class="github-link" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
       </div>
 
       <h2>Front-End Design Templates</h2>
