--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <h2>Full-Stack Apps</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <a href="https://metric-converter-88bu.onrender.com/" target="_blank">
+          <a href="https://metric-converter-axjd.onrender.com/" target="_blank">
             <img 
               src="./assets/metric-converter.png" 
               alt="Metric Converter" 
@@ -324,7 +324,7 @@
         </div>
 
         <div class="project-card">
-          <a href="https://issue-tracker-dnyt.onrender.com" target="_blank">
+          <a href="https://issue-tracker-2a1c.onrender.com" target="_blank">
             <img 
               src="./assets/issue-tracker.png" 
               alt="Issue Tracker" 
