--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
 
         <div class="project-card">
-          <a href="https://exercise-tracker-9ucf.onrender.com" target="_blank">
+          <a href="https://exercise-tracker-96ov.onrender.com" target="_blank">
             <img 
               src="./assets/exercise-tracker.png" 
               alt="Exercise Tracker" 
